# stats_ci

./: README.md  pyproject.toml  test.py
.github/workflows/: tests.yml
lib/: __init__.py  stats.py
tests/: test_stats.py
